Styling and Structure

--- a/app/views/pins/edit.html.haml
+++ b/app/views/pins/edit.html.haml
@@ -1,6 +1,6 @@
-%h1 Edit Pin
+.col-md-6.col-md-offset-3
+  %h1 Edit Pin
+  = render 'form'
 
-= render 'form'
-
-= link_to "Cancel", pin_path
+  = link_to "Cancel", pin_path
 
