--- a/app/views/pins/new.html.haml
+++ b/app/views/pins/new.html.haml
@@ -1,4 +1,5 @@
-%h1 New Form
-= render 'form'
-= link_to "Back", root_path
+.col-md-6.col-md-offset-3
+  %h1 New Form
+  = render 'form'
+  = link_to "Back", root_path
 
