--- a/app/views/pins/index.html.haml
+++ b/app/views/pins/index.html.haml
@@ -1,3 +1,4 @@
 = link_to "New Pin", new_pin_path
 - @pins.each do |pin|
   %h2= link_to pin.title, pin
+  = link_to (image_tag pin.image.url(:medium)), pin
