--- a/app/views/pins/index.html.haml
+++ b/app/views/pins/index.html.haml
@@ -1,4 +1,10 @@
-= link_to "New Pin", new_pin_path
-- @pins.each do |pin|
-  %h2= link_to pin.title, pin
-  = link_to (image_tag pin.image.url(:medium)), pin
+#pins.transitions-enabled
+  - @pins.each do |pin|
+    .box.panel.panel-default
+      = link_to (image_tag pin.image.url), pin
+      .panel-body
+        %h2= link_to pin.title, pin
+        %p.user
+        Submitted by
+        = pin.user.email
+
