--- a/app/views/pins/show.html.haml
+++ b/app/views/pins/show.html.haml
@@ -1,12 +1,21 @@
-%h1= @pin.title
-= image_tag @pin.image.url(:medium)
-%p= @pin.description
-%p
-Submitted by
-= @pin.user.email
-
-%br/
-
-= link_to "Back", root_path
-= link_to "Edit", edit_pin_path
-= link_to "Delete", pin_path, method: :delete, data: { confirm: "Are you sure you want to delete this Pin?" }
+#pin_show.row
+  .col-md-8.col-offset-2
+    .panel.panel-default
+      .panel-heading.pin_image
+        = image_tag @pin.image.url
+      .panel-body
+        %h1= @pin.title
+        %p= @pin.description
+        %p
+        Submitted by
+        = @pin.user.email
+      .panel-footer
+        .row
+          .col-md-6
+            Submitted by
+            = @pin.user.email
+          .col-md-6
+            .btn-group.pull-right
+              = link_to "Home", root_path, class: "btn btn-default"
+              = link_to "Edit", edit_pin_path, class: "btn btn-default"
+              = link_to "Delete", pin_path, method: :delete, data: { confirm: "Are you sure you want to delete this Pin?" }, class: "btn btn-default"
