--- a/app/views/pins/new.html.haml
+++ b/app/views/pins/new.html.haml
@@ -1,5 +1,9 @@
-.col-md-6.col-md-offset-3
-  %h1 New Form
-  = render 'form'
-  = link_to "Back", root_path
+.col-md-8.col-md-offset-2
+  .row
+    .panel.panel-default
+      .panel-heading
+        %h1 Create a New Pin
+      .panel-body
+        = render 'form'
+        = link_to "Cancel", root_path
 
